# clash-conf

./: .gitignore  README.md  package.json  pnpm-lock.yaml  prettier.config.js  pyproject.toml  rule-providers.yaml  ruleset-conv.py  ruleset-url.txt  url.txt
Clash/: clash.ini
app/: globals.scss  layout.js  page.js  providers.js  utils.js
app/api/: route.js
app/components/: content.js  footer.js  header.js  operator.js
clash/: README.md  clash.ini  clash_lite.ini  clash_t.ini
config/: README.md  clash.ini  cloudflare-warp.yaml  rule-providers.yaml  stash.ini  stash.yaml
rule/: BanAD_domain.yaml  BanProgramAD_domain.yaml  BanProgramAD_ipcidr.yaml  ChinaDomain_domain.yaml  ChinaDomain_ipcidr.yaml  Direct_classical.yaml  LocalAreaNetwork_domain.yaml  LocalAreaNetwork_ipcidr.yaml  NetEaseMusic_domain.yaml  NetEaseMusic_ipcidr.yaml  Netflix_domain.yaml  Netflix_ipcidr.yaml  ProxyGFWlist_domain.yaml  ProxyGFWlist_ipcidr.yaml  Proxy_classical.yaml  Reject_classical.yaml  UnBan_domain.yaml
script/: ruleset-conv.py  ruleset-url.txt
src/app/: globals.scss  layout.js  page.js  providers.js  siteinfo.json
src/app/api/: route.js
src/components/: content.js  content.module.scss  footer.js  footer.module.scss  header.js  header.module.scss
src/lib/: utils.js
src/styles/: globals.scss  shared.scss
stash/: 10010v3-tile.stoverride  jd_price.stoverride  ml.ini  ssid_policy.stoverride  stash.ini  stash.yaml  stash2.ini  stash_ml.ini  stash_ssid.ini  stash_ssid_policy.stoverride
