[project]
name = "ruleset-conv"
version = "0.6.0"
description = "此脚本用于将classical规则集拆分为domain与ipcidr规则集。"
authors = [{ name = "Yorun", email = "yorun@yorun.me" }]
dependencies = ["requests~=2.31.0", "pyyaml~=6.0"]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy~=1.3.0",
    "types-requests~=2.31.0.1",
    "types-pyyaml~=6.0.12.10",
]

[tool.rye.scripts]
ruleset-conv = { cmd = "python ./script/ruleset-conv.py" }

[tool.hatch.metadata]
allow-direct-references = true
