[project]
name = "ruleset-conv"
version = "0.6.0"
description = "此脚本用于将classical规则集拆分为domain与ipcidr规则集。"
authors = [{ name = "Yorun", email = "yorun@yorun.me" }]
dependencies = ["requests~=2.31.0", "pyyaml~=6.0"]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff~=0.0.270",
    "black~=23.3.0",
    "mypy~=1.3.0",
    "types-requests~=2.31.0.1",
    "types-pyyaml~=6.0.12.10",
]

[tool.rye.scripts]
start = "python ./script/ruleset-conv.py"
"lint:check" = { chain = ["format", "ruff check script"] }
"lint:fix" = { chain = ["format", "ruff check --fix script"] }
format = "black script"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
select = ["E", "F", "I", "UP"]
ignore = ["UP032"]
